feat: :sparkles: config workflow

--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -6,7 +6,7 @@ on:
       - Fix_Merge_Repository
       
 jobs:
-  build-and-push-create:
+  build-and-push-createEmployee:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -15,18 +15,17 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
 
-      - name: Build and push create-category
+      - name: Build and push create-employee
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/Categories/CreateCategory
-          file: ./BackEnd/Domains/Categories/CreateCategory/Dockerfile
+          context: ./BackEnd/Domains/Employees/CreateEmployee
+          file: ./BackEnd/Domains/Employees/CreateEmployee/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
-
-build-and-push-create:
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1
+  build-and-push-deleteEmployee:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -35,13 +34,169 @@ build-and-push-create:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
 
-      - name: Build and push create-category
+      - name: Build and push delete-employee
         uses: docker/build-push-action@v4
         with:
-          context: ./BackEnd/Domains/Categories/CreateCategory
-          file: ./BackEnd/Domains/Categories/CreateCategory/Dockerfile
+          context: ./BackEnd/Domains/Employees/DeleteEmployee
+          file: ./BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/create-category:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1
+  build-and-push-getallEmployee:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
+
+      - name: Build and push getall-employee
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Employees/GetAllEmployee
+          file: ./BackEnd/Domains/Employees/GetAllEmployee/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1
+  build-and-push-loginEmployee:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
+
+      - name: Build and push login-employee
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Employees/LoginEmployee
+          file: ./BackEnd/Domains/Employees/LoginEmployee/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1
+  build-and-push-updateEmployee:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
+
+      - name: Build and push update-employee
+        uses: docker/build-push-action@v4
+        with:
+          context: ./BackEnd/Domains/Employees/UpdateEmployee
+          file: ./BackEnd/Domains/Employees/UpdateEmployee/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1
+
+  deploy-createEmployee:
+    needs: build-and-push-createEmployee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to createEmployee QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_CREATEEMPLOYEE_QA2 }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+            sudo docker stop create-employee || true
+            sudo docker rm create-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1
+            sudo docker run -d --name create-employee --network host \
+              -e DB_URL="${{ secrets.DB_URL2 }}" \
+             -e DB_USERNAME="${{ secrets.DB_USERNAME2 }}" \
+             -e DB_PASSWORD="${{ secrets.DB_PASSWORD2 }}" \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1 
+  deploy-deleteEmployee:
+    needs: build-and-push-deleteEmployee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to deleteEmployee QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_DELETEEMPLOYEE_QA }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+           sudo docker stop delete-employee || true
+            sudo docker rm delete-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1
+            sudo docker run -d --name delete-employee --network host \
+              -e DB_URL="${{ secrets.DB_URL2 }}" \
+             -e DB_USERNAME="${{ secrets.DB_USERNAME2 }}" \
+             -e DB_PASSWORD="${{ secrets.DB_PASSWORD2 }}" \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1                   
+  deploy-getallEmployee:
+    needs: build-and-push-getallEmployee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to getallEmployee QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_GETALLEMPLOYEE_QA2 }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+           sudo docker stop getall-employee-employee || true
+            sudo docker rm getall-employee-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/getall-employee-employee:v1
+            sudo docker run -d --name getall-employee-employee --network host \
+              -e DB_URL="${{ secrets.DB_URL2 }}" \
+             -e DB_USERNAME="${{ secrets.DB_USERNAME2 }}" \
+             -e DB_PASSWORD="${{ secrets.DB_PASSWORD2 }}" \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/getall-employee-employee:v1   
+  deploy-loginEmployee:
+    needs: build-and-push-loginEmployee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to loginEmployee QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_LOGINEMPLOYEE_QA2 }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+            sudo docker stop login-employee || true
+            sudo docker rm login-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1
+            sudo docker run -d --name login-employee --network host \
+              -e DB_URL="${{ secrets.DB_URL2 }}" \
+             -e DB_USERNAME="${{ secrets.DB_USERNAME2 }}" \
+             -e DB_PASSWORD="${{ secrets.DB_PASSWORD2 }}" \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1 
+  deploy-updateEmployee:
+    needs: build-and-push-updateEmployee
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to updateEmployee QA
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_UPDATEEMPLOYEE_QA2 }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+            sudo docker stop update-employee || true
+            sudo docker rm update-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1
+            sudo docker run -d --name update-employee --network host \
+              -e DB_URL="${{ secrets.DB_URL2 }}" \
+             -e DB_USERNAME="${{ secrets.DB_USERNAME2 }}" \
+             -e DB_PASSWORD="${{ secrets.DB_PASSWORD2 }}" \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1                   
+                                      
+
+  
