--- a/BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
+++ b/BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
@@ -3,12 +3,16 @@ FROM eclipse-temurin:21-jdk-alpine
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
-COPY .env .env
-# Copia el archivo JAR del microservicio al contenedor
-COPY target/delete_employee-0.0.1-SNAPSHOT.jar app.jar
+# Copia solo el archivo JAR (asegura que el JAR ya esté generado antes de construir la imagen)
+COPY target/*.jar app.jar
 
 # Expone el puerto en el que corre la aplicación (ajústalo según tu configuración)
 EXPOSE 8093
 
 # Comando para ejecutar la aplicación
 ENTRYPOINT ["java", "-jar", "app.jar"]
+
+
+
+
+
