--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -202,14 +202,14 @@ jobs:
           username: ${{ secrets.USERNAME2 }}
           key: ${{ secrets.EC2_SSH_KEY2 }}
           script: |
-           sudo docker stop getall-employee-employee || true
-            sudo docker rm getall-employee-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/getall-employee-employee:v1
-            sudo docker run -d --name getall-employee-employee --network host \
+           sudo docker stop getallemployee-employee || true
+            sudo docker rm getallemployee-employee || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1
+            sudo docker run -d --name getallemployee-employee --network host \
               -e DB_URL="${{ secrets.DB_URL }}" \
              -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
              -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/getall-employee-employee:v1   
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1   
   deploy-loginEmployee:
     needs: build-and-push-loginEmployee
     runs-on: ubuntu-latest
