--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -153,6 +153,36 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1
 
+    build-and-push-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build frontend
+        run: npm run build
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
+
+      - name: Build and push frontend
+        uses: docker/build-push-action@v4
+        with:
+          context: ./FrontEnd
+          file: ./FrontEnd/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1
   deploy-createEmployee:
     needs: build-and-push-createEmployee
     runs-on: ubuntu-latest
@@ -247,7 +277,24 @@ jobs:
               -e DB_URL="${{ secrets.DB_URL }}" \
              -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
              -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1                   
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1 
+  deploy-frontend:
+    needs: build-and-push-frontend
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy Frontend to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST_DNS_FRONTEND }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
+          script: |
+            sudo docker stop frontend || true
+            sudo docker rm frontend || true
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1
+            sudo docker run -d --name frontend -p 80:80 \
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1   
+
                                       
 
   
