--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - Fix_Merge_Repository
-      
+
 jobs:
   build-and-push-createEmployee:
     runs-on: ubuntu-latest
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21  # Asegura que sea la misma versión usada en el proyecto
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -37,99 +37,13 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1
 
-  build-and-push-deleteEmployee:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up JDK 21  # Asegura que sea la misma versión usada en el proyecto
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Build JAR with Maven
-        run: |
-          cd BackEnd/Domains/Employees/DeleteEmployee
-          mvn clean package -DskipTests  
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
-
-      - name: Build and push delete-employee
-        uses: docker/build-push-action@v4
-        with:
-          context: ./BackEnd/Domains/Employees/DeleteEmployee
-          file: ./BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1
-  build-and-push-getallEmployee:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 21  # Asegura que sea la misma versión usada en el proyecto
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Build JAR with Maven
-        run: |
-          cd BackEnd/Domains/Employees/GetAllEmployee
-          mvn clean package -DskipTests
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
-
-      - name: Build and push getall-employee
-        uses: docker/build-push-action@v4
-        with:
-          context: ./BackEnd/Domains/Employees/GetAllEmployee
-          file: ./BackEnd/Domains/Employees/GetAllEmployee/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1
-  build-and-push-loginEmployee:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 21  # Asegura que sea la misma versión usada en el proyecto
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '21'
-
-      - name: Build JAR with Maven
-        run: |
-          cd BackEnd/Domains/Employees/LoginEmployee
-          mvn clean package -DskipTests
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
-
-      - name: Build and push login-employee
-        uses: docker/build-push-action@v4
-        with:
-          context: ./BackEnd/Domains/Employees/LoginEmployee
-          file: ./BackEnd/Domains/Employees/LoginEmployee/Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1
   build-and-push-updateEmployee:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21  # Asegura que sea la misma versión usada en el proyecto
+      - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
@@ -139,6 +53,7 @@ jobs:
         run: |
           cd BackEnd/Domains/Employees/UpdateEmployee
           mvn clean package -DskipTests
+
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
@@ -153,7 +68,8 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1
 
-    build-and-push-frontend:
+  # ✅ Se corrigió la indentación y estructura de build-and-push-frontend
+  build-and-push-frontend:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -183,101 +99,7 @@ jobs:
           file: ./FrontEnd/Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1
-  deploy-createEmployee:
-    needs: build-and-push-createEmployee
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to createEmployee QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_CREATEEMPLOYEE_QA }}
-          username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY2 }}
-          script: |
-            sudo docker stop create-employee || true
-            sudo docker rm create-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1
-            sudo docker run -d --name create-employee --network host \
-              -e DB_URL="${{ secrets.DB_URL }}" \
-             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
-             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/create-employee:v1 
-  deploy-deleteEmployee:
-    needs: build-and-push-deleteEmployee
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to deleteEmployee QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_DELETEEMPLOYEE_QA }}
-          username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY2 }}
-          script: |
-           sudo docker stop delete-employee || true
-            sudo docker rm delete-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1
-            sudo docker run -d --name delete-employee --network host \
-              -e DB_URL="${{ secrets.DB_URL }}" \
-             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
-             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/delete-employee:v1                   
-  deploy-getallEmployee:
-    needs: build-and-push-getallEmployee
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to getallEmployee QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_GETALLEMPLOYEE_QA }}
-          username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY2 }}
-          script: |
-           sudo docker stop getallemployee-employee || true
-            sudo docker rm getallemployee-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1
-            sudo docker run -d --name getallemployee-employee --network host \
-              -e DB_URL="${{ secrets.DB_URL }}" \
-             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
-             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/getallemployee-employee:v1   
-  deploy-loginEmployee:
-    needs: build-and-push-loginEmployee
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to loginEmployee QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_LOGINEMPLOYEE_QA }}
-          username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY2 }}
-          script: |
-            sudo docker stop login-employee || true
-            sudo docker rm login-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1
-            sudo docker run -d --name login-employee --network host \
-              -e DB_URL="${{ secrets.DB_URL }}" \
-             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
-             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1 
-  deploy-updateEmployee:
-    needs: build-and-push-updateEmployee
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to updateEmployee QA
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST_DNS_UPDATEEMPLOYEE_QA }}
-          username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY2 }}
-          script: |
-            sudo docker stop update-employee || true
-            sudo docker rm update-employee || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1
-            sudo docker run -d --name update-employee --network host \
-              -e DB_URL="${{ secrets.DB_URL }}" \
-             -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
-             -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/update-employee:v1 
+
   deploy-frontend:
     needs: build-and-push-frontend
     runs-on: ubuntu-latest
@@ -293,8 +115,4 @@ jobs:
             sudo docker rm frontend || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1
             sudo docker run -d --name frontend -p 80:80 \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1   
-
-                                      
-
-  
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:v1
