--- a/BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
+++ b/BackEnd/Domains/Employees/DeleteEmployee/Dockerfile
@@ -3,6 +3,7 @@ FROM eclipse-temurin:21-jdk-alpine
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
+COPY .env .env
 # Copia solo el archivo JAR (asegura que el JAR ya esté generado antes de construir la imagen)
 COPY target/*.jar app.jar
 
