--- a/BackEnd/Domains/Employees/LoginEmployee/Dockerfile
+++ b/BackEnd/Domains/Employees/LoginEmployee/Dockerfile
@@ -3,6 +3,7 @@ FROM eclipse-temurin:21-jdk-alpine
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
+COPY .env .env
 
 # Copia el archivo JAR del microservicio al contenedor
 COPY target/*.jar app.jar
