--- a/BackEnd/Domains/Employees/UpdateEmployee/Dockerfile
+++ b/BackEnd/Domains/Employees/UpdateEmployee/Dockerfile
@@ -3,6 +3,7 @@ FROM eclipse-temurin:21-jdk-alpine
 
 # Establece el directorio de trabajo en el contenedor
 WORKDIR /app
+COPY .env .env
 COPY target/*.jar app.jar
 
 # Expone el puerto en el que corre la aplicación (ajústalo según tu configuración)
