--- a/BackEnd/Domains/Employees/LoginEmployee/pom.xml
+++ b/BackEnd/Domains/Employees/LoginEmployee/pom.xml
@@ -94,6 +94,10 @@
        		<groupId>org.springframework.boot</groupId>
         	<artifactId>spring-boot-starter-oauth2-client</artifactId>
     	</dependency>
+		<dependency>
+    		<groupId>org.springframework.security</groupId>
+    		<artifactId>spring-security-oauth2-core</artifactId>
+		</dependency>
       	<dependency>
     	    <groupId>org.thymeleaf.extras</groupId>
     	    <artifactId>thymeleaf-extras-springsecurity6</artifactId>
