--- a/.github/workflows/deploy2.yml
+++ b/.github/workflows/deploy2.yml
@@ -269,7 +269,7 @@ jobs:
             sudo docker stop login-employee || true
             sudo docker rm login-employee || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/login-employee:v1
-            sudo docker run -d --name login-employee --network host \
+            sudo docker run -d --name login-employee -p 8091:8091 \
               -e DB_URL="${{ secrets.DB_URL }}" \
              -e DB_USERNAME="${{ secrets.DB_USERNAME }}" \
              -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
