--- a/BackEnd/Domains/Products/DeleteProduct/.env
+++ b/BackEnd/Domains/Products/DeleteProduct/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb://localhost:27017
-APP_PORT=8084
+MONGO_URI=mongodb+srv://admin:1234PDistribuida@category.dloun.mongodb.net/product_db?retryWrites=true&w=majority
+APP_PORT=80
