--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -64,6 +64,23 @@ jobs:
         needs: build-and-push-frontend
         runs-on: ubuntu-latest
         steps:
+          - name: Install Docker if not present
+            uses: appleboy/ssh-action@master
+            with:
+                host: ${{ secrets.HOST_DNS_FRONTEND_QA }}
+                username: ${{ secrets.USERNAME3 }}
+                key: ${{ secrets.EC2_SSH_KEY }}
+                script: |
+                    if ! command -v docker &> /dev/null; then
+                        echo "Docker no encontrado. Instalando..."
+                        sudo apt update
+                        sudo apt install -y docker.io
+                        sudo systemctl enable docker
+                        sudo systemctl start docker
+                        echo "Docker instalado correctamente."
+                    else
+                        echo "Docker ya está instalado."
+                    fi
           - name: Deploy Frontend to EC2
             uses: appleboy/ssh-action@master
             with:
