--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -91,7 +91,7 @@ jobs:
                     sudo docker stop frontend || true
                     sudo docker rm frontend || true
                     sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
-                    sudo docker run -d --name frontend -p 80:80 \
+                    sudo docker run -d --name frontend --network host \
                       -e REACT_APP_BACKEND_URL_READ_CATEGORY=${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }} \
                       -e REACT_APP_BACKEND_URL_CREATE_CATEGORY=${{ secrets.HOST_DNS_CREATECATEGORY_QA }} \
                       -e REACT_APP_BACKEND_URL_DELETE_CATEGORY=${{ secrets.HOST_DNS_DELETECATEGORY_QA }} \
