--- a/BackEnd/Domains/GraphQL-Gateway/package.json
+++ b/BackEnd/Domains/GraphQL-Gateway/package.json
@@ -11,9 +11,13 @@
   "description": "",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "graphql": "^16.10.0"
+    "graphql": "^16.10.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0"
   }
 }
