feat: :sparkles: configuration addcart

--- a/.github/workflows/deploy-cart-addcart.yml
+++ b/.github/workflows/deploy-cart-addcart.yml
@@ -43,7 +43,7 @@ jobs:
           script: |
             sudo docker stop add-cart || true
             sudo docker rm add-cart || true
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/add-cart:v1
+            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/addcart:v1
             sudo docker run -d --name add-cart -p 8001:8001 \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/add-cart:v1
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/addcart:v1
