--- a/.github/workflows/deploy-cart-addcart.yml
+++ b/.github/workflows/deploy-cart-addcart.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
 
       - name: Build and push AddCart
         uses: docker/build-push-action@v4
@@ -27,7 +27,7 @@ jobs:
           context: ./BackEnd/Domains/Cart/AddCart
           file: ./BackEnd/Domains/Cart/AddCart/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/add-cart:v1
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/add-cart:v1
 
     # Deploy AddCart
   deploy-addcart:
@@ -37,13 +37,15 @@ jobs:
       - name: Deploy to AddCart on EC2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_ADDCART_QA }}
+          host: ${{ secrets.HOST_DNS_CARTSERVICE_QA }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             sudo docker stop add-cart || true
             sudo docker rm add-cart || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME2 }}/addcart:v1
-            sudo docker run -d --name add-cart -p 8001:8001 \
+            sudo docker run -d --name add-cart -p 8001:8001 --restart unless-stopped \
               -e MONGO_URI="${{ secrets.MONGO_URI }}" \
-              ${{ secrets.DOCKERHUB_USERNAME2 }}/addcart:v1
+              -e DB_NAME="cart_db" \
+              -e CART_SERVICE_URL="http://${{ secrets.HOST_DNS_ADDCART_QA }}:8001/graphql" \  # ✅ Corrección aquí
+              ${{ secrets.DOCKERHUB_USERNAME2 }}/add-cart:v1 
