--- a/BackEnd/Domains/ShoppingCart/AddProductToCart/Dockerfile
+++ b/BackEnd/Domains/ShoppingCart/AddProductToCart/Dockerfile
@@ -1,9 +1,19 @@
-FROM python:3.9
+# Usa una imagen base de Python
+FROM python:3.10-slim
 
+# Define el directorio de trabajo dentro del contenedor
 WORKDIR /app
 
+# Copia los archivos del microservicio al contenedor
 COPY . /app
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Instala las dependencias
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt && \
+    pip install uvicorn fastapi
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+# Expone el puerto 
+EXPOSE 80
+
+# Comando de arranque
+CMD ["uvicorn", "main:app", "--port", "80"]
