--- a/.github/workflows/deploy-graphql-up.yml
+++ b/.github/workflows/deploy-graphql-up.yml
@@ -51,7 +51,7 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
             # Ejecutar el contenedor correctamente
-            sudo docker run -d --name graphql-gateway --network host \
+            sudo docker run -d --name graphql-gateway -p 80:80 --network host \
               -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
               -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
               -e GET_PRODUCT_BY_ID_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTBYID_QA }}/products/by-id" \
