--- a/.github/workflows/deploy-category-get_by_id.yml
+++ b/.github/workflows/deploy-category-get_by_id.yml
@@ -3,7 +3,7 @@ name: Deploy get_ByID-category
 on:
     push:
         branches:
-            - Feature_BackEnd_CategoryDomain_AddMicroservice_DeleteCategory
+            - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/Categories/GetCategoryById/**'
 jobs:
