--- a/.github/workflows/deploy-graphql-up.yml
+++ b/.github/workflows/deploy-graphql-up.yml
@@ -6,21 +6,18 @@ on:
             - Fix_Merge_Repository
         paths:
             - 'BackEnd/Domains/GraphQL-Gateway/**'
-
 jobs:
-  # Build and Push graphql-gateway
+    # Build and Push graphql-gateway
   build-and-push-graphql:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Build and push graphql-gateway
         uses: docker/build-push-action@v4
         with:
@@ -29,7 +26,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
 
-  # Deploy graphql-gateway
+    # Deploy graphql-gateway (Depende de GetProductsByCategory)
   deploy-graphql:
     needs: build-and-push-graphql
     runs-on: ubuntu-latest
@@ -41,20 +38,10 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # Detener y eliminar el contenedor anterior solo si existe
-            if [ "$(sudo docker ps -q -f name=graphql-gateway)" ]; then
-                sudo docker stop graphql-gateway
-                sudo docker rm graphql-gateway
-            fi
-
-            # Descargar la última imagen de Docker
+            sudo docker stop graphql-gateway || true
+            sudo docker rm graphql-gateway || true
             sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
-
-            # Ejecutar el contenedor correctamente
-            sudo docker run -d --name graphql-gateway -p 80:80 --network host \
+            sudo docker run -d --name graphql-gateway --network host \
               -e CATEGORY_SERVICE_URL="http://${{ secrets.HOST_DNS_GETBYIDCATEGORY_QA }}/category" \
               -e PRODUCT_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTSBYCATEGORY_QA }}/products/by-category" \
-              -e GET_PRODUCT_BY_ID_SERVICE_URL="http://${{ secrets.HOST_DNS_GETPRODUCTBYID_QA }}/products/by-id" \
-              -e ADD_PRODUCT_TO_CART_SERVICE_URL="http://${{ secrets.HOST_DNS_ADDTOCART_QA }}/cart/add" \
-              -e GRAPHQL_GATEWAY_URL="http://${{ secrets.HOST_DNS_GRAPHQL_QA }}/graphql" \
               ${{ secrets.DOCKERHUB_USERNAME }}/graphql-gateway:latest
