--- a/.github/workflows/deploy-employee-login.yml
+++ b/.github/workflows/deploy-employee-login.yml
@@ -1,6 +1,11 @@
+name: Deploy Login
 
-
-
+on:
+    push:
+        branches:
+            - Fix_Merge_Repository
+        paths:
+            - 'BackEnd/Domains/Employees/LoginEmployee/**'
 
 build-and-push-loginEmployee:
     runs-on: ubuntu-latest
