--- a/.github/workflows/deploy-front-end.yml
+++ b/.github/workflows/deploy-front-end.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME2 }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD2 }}
 
       - name: Build and push frontend to DockerHub
         uses: docker/build-push-action@v4
@@ -52,7 +52,7 @@ jobs:
           context: ./FrontEnd/employee-app
           file: ./FrontEnd/employee-app/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME2 }}/frontend:latest
           build-args: |
             REACT_APP_BACKEND_URL_READ_CATEGORY=${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }}
             REACT_APP_BACKEND_URL_CREATE_CATEGORY=${{ secrets.HOST_DNS_CREATECATEGORY_QA }}
@@ -67,9 +67,9 @@ jobs:
       - name: Install Docker if not present
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_FRONTEND_QA }}
+          host: ${{ secrets.HOST_DNS_FRONTEND }}
           username: ${{ secrets.USERNAME2 }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
           script: |
             if ! command -v docker &> /dev/null; then
                 echo "Docker no encontrado. Instalando..."
@@ -85,9 +85,9 @@ jobs:
       - name: Deploy Frontend to EC2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.HOST_DNS_FRONTEND_QA }}
-          username: ${{ secrets.USERNAME3 }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.HOST_DNS_FRONTEND }}
+          username: ${{ secrets.USERNAME2 }}
+          key: ${{ secrets.EC2_SSH_KEY2 }}
           script: |
             # Detener cualquier servicio en el puerto 80 (como Nginx)
             sudo systemctl stop nginx || true
@@ -100,10 +100,10 @@ jobs:
             sudo fuser -k 80/tcp || true
 
             # Descargar la imagen y ejecutar el contenedor
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/frontend:v1
             docker run -d --name frontend -p 80:80 \
             -e REACT_APP_BACKEND_URL_READ_CATEGORY=${{ secrets.HOST_DNS_GETALLCATEGORIES_QA }} \
             -e REACT_APP_BACKEND_URL_CREATE_CATEGORY=${{ secrets.HOST_DNS_CREATECATEGORY_QA }} \
             -e REACT_APP_BACKEND_URL_DELETE_CATEGORY=${{ secrets.HOST_DNS_DELETECATEGORY_QA }} \
             -e REACT_APP_BACKEND_URL_UPDATE_CATEGORY=${{ secrets.HOST_DNS_UPDATECATEGORY_QA }} \
-            ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest   
+            ${{ secrets.DOCKERHUB_USERNAME }}/frontend:v1   
